--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -50,10 +50,36 @@
   display: flex;
   align-content: center;
   justify-content: center;
+  h2{
+    font-family: $font1;
+    font-size: 40px;
+    color: $white;
+  }
+  .title-bar{
+    background-color: $teal;
+    height: 4px;
+    width: 45%;
+    margin: 15px;
+  }
+  h3{
+    font-family: $font1;
+    font-size: 25px;
+    color: $white;
+  }
+  button{
+    background: $teal;
+    color: $white;
+    padding: 10px;
+    font-size: 15px;
+    width: 200px;
+    margin-top: 30px;
+
+  }
 }
 .welcome-content {
-
+  height: auto;
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  align-items: center;
 }
