Welcome page now has hover effects, logo, fonts, button effect, sloped content div

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,13 @@
 
 $font1: Work Sans, sans-serif;
 $white: #fff;
-$teal: #44797c;
+$teal: #14bfc8;
 $dgrey: #3c3d3c;
 $lgrey: #dedede;
 $dblue: #2d556e;
+
+
+body{
+  width: 100vw;
+  overflow: none;
+}
