Added content to welcome page, added testing inputs for signup and login pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ $lgrey: #dedede;
 $dblue: #2d556e;
 
 
-body{
-  width: 100vw;
-  overflow: none;
+html, body{
+  max-width: 100%;
+  overflow-x: hidden;
 }
