--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -44,9 +44,15 @@
         font-size: 30px;
         padding: 6px;
     }
-    li:hover {
-        background-color: $teal;
-        transition: 0.3s;
+    li:after {
+      display:block;
+      content: '';
+      border-bottom: solid 3px $orange;
+      transform: scaleX(0.0001);
+      transition: transform 250ms ease-in-out;
+    }
+    li:hover:after {
+         transform: scaleX(1)
     }
 }
 .welcome-container {
@@ -54,7 +60,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    h2 {
+    h1 {
         font-family: $font1;
         font-size: 50px;
         color: $white;
@@ -157,6 +163,7 @@
       margin-top: 25px;
 
     }
+
   }
 
 
@@ -193,21 +200,44 @@
 }
 .welcome-driving {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 150px 100px 100px;
+
+
     background-image: url('./road.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
+
+    h2{
+      font-family: $font1;
+      font-size: 40px;
+      color: $white;
+      box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
+      background: rgba(0,0,0,0.55);
+    }
+
     ul{
       display: flex;
       flex-direction: column;
+      box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
+      background: rgba(0,0,0,0.55);
       li{
+        display: flex;
+        flex-direction: row;
+
+
         font-family: $font1;
         color: $white;
         font-size: 30px;
         padding: 6px;
+        margin: 10px;
+        div{
+          color: $teal;
+          margin-right: 20px;
+        }
       }
     }
 
