Imported map, changed main pic

--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -3,7 +3,8 @@
 .welcome-background {
     height: 100vh;
     width: 100vw;
-    background-image: url("./truck-d-min.jpg");
+    background-image: url("./birdShit.jpeg");
+    
     background-size: cover;
     background-repeat: no-repeat;
 }
