--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,18 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:400,600);
+@import url(https://fonts.googleapis.com/css?family=Khula:400,300);
+
 
 $font1: Work Sans, sans-serif;
+$font2: Khula, sans-serif;
 $white: #fff;
 $teal: #14bfc8;
 $dgrey: #3c3d3c;
 $lgrey: #dedede;
 $dblue: #2d556e;
 $orange: #ffa027;
+$green:#4ca64c;
+$red:#ff6666;
+$mgrey: #686a68;
 
 
 html, body{
