--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,3 +1,5 @@
+@import "main";
+
 .modalCurtain{
 
   width: 100vw;
@@ -13,7 +15,7 @@
   opacity: 0.8;
 }
 
-.modalBox{
+.wide-modal-box{
 
   background: #fff;
   opacity: 0.99;
@@ -30,6 +32,32 @@
   padding: 40px;
 }
 
-.modalNav{
+.modal-nav{
   position: relative;
+}
+
+.close-mod{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  color: $dgrey;
+  font-size: 20px;
+}
+
+.thin-modal-box{
+
+  background: #fff;
+  opacity: 0.99;
+  width: 30%;
+  height: 60vh;
+
+  border-radius: 3px;
+
+  position: fixed;
+  top: 15%;
+  left: 35%;
+  z-index: 1000;
+
+
 }
