finished modal styling on login and signup, tweaked stying in userhome, minified pictures

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -38,19 +38,19 @@
 
 .close-mod{
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 10px;
 
-  color: $dgrey;
-  font-size: 20px;
+  color: $dblue;
+  font-size: 30px;
 }
 
 .thin-modal-box{
 
   background: #fff;
   opacity: 0.99;
-  width: 30%;
-  height: 60vh;
+  width: 390px;
+  height: 520px;
 
   border-radius: 3px;
 
