--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -3,7 +3,7 @@
 .welcome-background {
     height: 100vh;
     width: 100vw;
-    background-image: url("./birdShit.jpeg");
+    background-image: url("./birdShit-min.jpeg");
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -293,7 +293,7 @@
     padding: 100px 100px 100px;
 
 
-    background-image: url('./road.jpeg');
+    background-image: url('./road-min.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 750px;
