--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -4,13 +4,130 @@
   height: 100%;
   width: 100%;
 
-  background: $lgrey;
-  border-top: $teal 6px solid;
+  background: $white;
+  border-top: $teal 8px solid;
   border-radius: 3px;
+
+  text-align: center;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  
+  justify-content: flex-end;
+
+}
+
+.signup-top{
+
+  height: 80%;
+  width: 70%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  h3{
+    color: $dblue;
+    font-size: 35px;
+    font-family: $font3;
+    font-weight: bolder;
+
+    margin-bottom: 30%;
+  }
+
+.signin-input{
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  border-bottom: $dblue 3px solid;
+
+  margin-bottom: 25px;
+
+  .signin-user-icon{
+    color: $teal;
+  }
+
+  .signin-key-icon{
+    color: $teal;
+  }
+
+  input{
+    position: relative;
+
+    width: 100%;
+    height: 35px;
+
+    font-size: 20px;
+    font-family: $font1;
+
+    background: $white;
+    outline: none;
+    border: none;
+
+    margin-left: 10px;
+  }
+
+  input:focus {
+    background: $lgrey;
+    outline: none;
+    border: none;
+
+
+}
+
+}
+
+
+
+  button{
+    width: 100%;
+    height: 55px;
+
+    font-size: 20px;
+    font-family: $font1;
+    color: $white;
+
+    background: $teal;
+    transition: 0.3s;
+
+    border-radius: 5px;
+  }
+
+  button:focus {
+    outline: none;
+    border: none;
+
+    background: $orange;
+    transition: 0.3s;
+  }
+
+}
+
+.signup-bottom{
+
+
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 15%;
+  width: 100%;
+
+  border-top: solid $lgrey 2px;
+
+  p{
+    color: $dgrey;
+    font-family: $font2;
+
+    span{
+      color: $teal;
+
+      border-bottom:  $teal 2px solid;
+    }
+  }
+
 }
