--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:400,600);
 @import url(https://fonts.googleapis.com/css?family=Khula:400,300);
+@import url(https://fonts.googleapis.com/css?family=Heebo:500);
 
 
 $font1: Work Sans, sans-serif;
 $font2: Khula, sans-serif;
+$font3: Heebo, sans-serif;
 $white: #fff;
 $teal: #14bfc8;
 $dgrey: #3c3d3c;
