--- a/src/styles/user-home.scss
+++ b/src/styles/user-home.scss
@@ -26,7 +26,7 @@ width: 80%;
 }
 .side-menu-options{
 
-  margin-top: 20px;
+  margin-top: 40px;
 
   ul{
     display: flex;
@@ -37,7 +37,7 @@ width: 80%;
       align-items: center;
       justify-content: space-between;
 
-      padding: 6px;
+      padding: 10px;
       // border-bottom: 1px $lgrey solid;
       margin-top: 5px;
 
@@ -123,6 +123,8 @@ width: 80%;
   background-color: $white;
   color: $mgrey;
   font-family: $font1;
+
+  border-bottom: $lgrey 3px solid;
 
 
   .dash{
