Made gps modal for vehicles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,9 @@
 $font1: Work Sans, sans-serif;
 $font2: Khula, sans-serif;
 $white: #fff;
+$lteal: #33e2eb;
+$dteal: #0c787d;
+$mteal: #11a0a7;
 $teal: #14bfc8;
 $dgrey: #3c3d3c;
 $lgrey: #dedede;
