made user infor modal, fixed userHome filepath

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -36,12 +36,21 @@
   position: relative;
 }
 
-.close-mod{
+.close-mod-blue{
   position: absolute;
   top: 15px;
   right: 10px;
 
   color: $dblue;
+  font-size: 30px;
+}
+
+.close-mod-white{
+  position: absolute;
+  top: 15px;
+  right: 10px;
+
+  color: $white;
   font-size: 30px;
 }
 
