--- a/src/styles/user-home.scss
+++ b/src/styles/user-home.scss
@@ -120,11 +120,11 @@ width: 80%;
   height: 10vh;
   min-height: 77px;
   width: 75vw;
-  background-color: $white;
-  color: $mgrey;
+  background-color: $mteal;
+  color: $white;
   font-family: $font1;
 
-  border-bottom: $lgrey 3px solid;
+
 
 
   .dash{
