--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -26,7 +26,7 @@
     .logo {
         height: 100%;
         width: 100%;
-        background-image: url('./LogoLTealG.png');
+        background-image: url('./LogoOrangeTealG.png');
         background-size: contain;
         background-repeat: no-repeat;
     }
