--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -203,6 +203,7 @@
         width: 200px;
         background: $white;
         position: relative;
+            box-shadow: 2px 3px 0px 2px rgba(0, 0, 0, 0.4);
 
         .icon-map{
           color: $teal;
@@ -256,7 +257,7 @@
     }
 
     .welcome-mid-section{
-      height: 10vh;
+      height: 100px;
       width: 100%;
       background: $teal;
 
@@ -276,7 +277,7 @@
     }
 
     .welcome-bottom-section{
-      height: 30vh;
+      height: 290px;
       width: 100%;
       background: $teal;
 
