--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,6 +11,8 @@
   align-items: center;
   justify-content: center;
 
+  opacity: 0.99;
+
   .footer-social{
     color: $teal;
     font-size: 30px;
