Made data in controller scoping with ng-repeat and markers showing

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -20,7 +20,8 @@
   background: #fff;
   opacity: 0.99;
   width: 85%;
-  height: 85vh;
+  height: auto;
+  min-height: 80vh;
 
   border-radius: 5px;
 
