fixed calender styling

--- a/src/styles/angular-datepicker.scss
+++ b/src/styles/angular-datepicker.scss
@@ -165,7 +165,7 @@ datepicker {
 		background: $dteal;
 	}
 	&:nth-child(even) {
-		background: $mteal;
+		background: $teal;
 	}
 	a {
 		text-decoration: none;
