--- a/src/styles/angular-datepicker.scss
+++ b/src/styles/angular-datepicker.scss
@@ -259,8 +259,9 @@ datepicker {
 	z-index: 999;
 	min-width: 220px;
 	margin: 0 auto;
+	margin-top: 9px;
 
-	width: 35%;
+	width: 106%;
 	-webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
 	-moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
 	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
