--- a/src/styles/angular-datepicker.scss
+++ b/src/styles/angular-datepicker.scss
@@ -162,7 +162,7 @@ datepicker {
 	font-size: 15px;
 	line-height: 40px;
 	&:nth-child(odd) {
-		background: $dteal;
+		background: $dblue;
 	}
 	&:nth-child(even) {
 		background: $mteal;
@@ -221,8 +221,9 @@ datepicker {
 	max-width: 100%;
 	margin: 0 auto;
 	padding: 0 2% 0 2%;
-	background: $lgrey;
+	background: $white;
 	border-bottom: 1px solid rgba(0,0,0,0.02);
+
 	div {
 		width: 13.2%;
 		font-weight: 500;
@@ -253,7 +254,7 @@ datepicker {
 	}
 }
 ._720kb-datepicker-calendar {
-	background: white;
+	background: $lgrey;
 	color: $dgrey;
 	position: absolute;
 	z-index: 999;
