--- a/src/styles/vehicle-info.scss
+++ b/src/styles/vehicle-info.scss
@@ -4,13 +4,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background: $mteal;
+    background: $dteal;
     height: auto;
 
     .vehicle-name-tab {
 
       width: 100%;
-      background: $dteal;
+      background: $dblue;
       text-align: left;
 
       h4{
