--- a/src/styles/vehicle-location.scss
+++ b/src/styles/vehicle-location.scss
@@ -7,22 +7,21 @@
     .location-left {
         display: flex;
         flex-direction: column;
-        width: 35%;
-        min-width: 240px;
+        width: 350px;
         height: 72vh;
-        background: $dblue;
+        background: $white;
     }
     .location-header {
         padding: 10px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background: $teal;
+        background: $mteal;
 
-        .icon-calender {
-            font-size: 20px;
-            color: $white;
-        }
+        // .icon-calender {
+        //     font-size: 20px;
+        //     color: $white;
+        // }
 
         input {
             border: none;
@@ -62,23 +61,29 @@
             display: flex;
             flex-direction: column;
             li {
+                height: 80px;
+
+                text-align: center;
+
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                justify-content: space-between;
-                color: $white;
+
+                justify-content: space-around;
+                color: $mgrey;
                 font-family: $font1;
                 border-bottom: 1px $lgrey solid;
             }
             li:hover {
                 background: $orange;
+                color: $white;
             }
         }
     }
 
     ng-map {
         height: 72vh;
-        width: 65%;
+        width: 100%;
     }
 
 }
