few css changes

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -94,6 +94,8 @@
     transition: 0.3s;
 
     border-radius: 5px;
+
+    cursor: pointer;
   }
 
   button:focus {
@@ -127,6 +129,8 @@
       color: $teal;
 
       border-bottom:  $teal 2px solid;
+
+      cursor: pointer;
     }
   }
 
