--- a/src/styles/user-info.scss
+++ b/src/styles/user-info.scss
@@ -35,25 +35,107 @@
   justify-content: space-between;
   align-items: center;
 
+  height: 535px;
+  width: 100%;
+  background: $white;
+
+
+.content-left{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   height: 100%;
+  width: 40%;
 
-  .user-icon{
-    color: $mteal;
-    font-size: 400px;
 
-    position: relative;
+    .user-icon{
+      color: $mteal;
+      font-size: 200px;
 
-    .icon-user{
-      font-size: 220px;
+      position: relative;
 
-      position: absolute;
+      .icon-user{
+        font-size: 110px;
 
-      top: 70px;
-      left: 90px;
+        position: absolute;
+
+        top: 35px;
+        left: 45px;
+      }
+    }
+    .button-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      height: 65px;
+      width: 265px;
     }
 
-  }
+    button{
+      height: 50px;
+      width: 230px;
+      background-color: $teal;
+      transition: 0.3s;
+      font-size: 20px;
+      font-family: $font2;
+      cursor: pointer;
 
+
+    }
+    button:hover{
+      height: 60px;
+      width: 265px;
+      background-color: $orange;
+      font-size: 25px;
+
+      transition: 0.3s;
+    }
+}
+
+  .content-right{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+
+
+    height: 100%;
+    width: 60%;
+
+  .user-profile-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+    ul{
+      height: 400px;
+      width: 400px;
+
+      li{
+        display: flex;
+        align-items: center;
+
+        height: 60px;
+        width: 100%;
+        margin-bottom: 30px;
+        font-size: 30px;
+        background: $mgrey;
+        padding-left: 15px;
+
+        font-family: $font2;
+        color: $white;
+
+          }
+       }
+    }
+  }
 
 }
 
