--- a/src/styles/user-info.scss
+++ b/src/styles/user-info.scss
@@ -90,12 +90,21 @@
 
     }
     button:hover{
-      height: 60px;
-      width: 265px;
-      background-color: $orange;
-      font-size: 25px;
+      height: 55px;
+      width: 245px;
+      background-color: $red;
+      font-size: 23px;
 
       transition: 0.3s;
+    }
+    .pay-button:hover{
+      height: 55px;
+      width: 245px;
+      background-color: $green;
+      font-size: 23px;
+
+      transition: 0.3s;
+
     }
 }
 
@@ -129,7 +138,7 @@
         width: 100%;
         margin-bottom: 55px;
         font-size: 30px;
-        background: $mgrey;
+        background: $dblue;
         padding-left: 15px;
 
         font-family: $font2;
