--- a/src/styles/user-info.scss
+++ b/src/styles/user-info.scss
@@ -80,7 +80,7 @@
     button{
       height: 50px;
       width: 230px;
-      background-color: $teal;
+      background-color: $mgrey;
       transition: 0.3s;
       font-size: 20px;
       font-family: $font2;
@@ -112,7 +112,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
 
 
 
