fixed the address order, added car array and listed it

--- a/src/styles/web/vehicle-location.scss
+++ b/src/styles/web/vehicle-location.scss
@@ -59,7 +59,8 @@
         overflow-y: scroll;
         ul {
             display: flex;
-            flex-direction: column;
+            flex-direction: column-reverse;
+
             li {
                 height: 80px;
 
