--- a/src/styles/web/signUp.scss
+++ b/src/styles/web/signUp.scss
@@ -14,6 +14,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  cursor: default;
+
 
 }
 
@@ -33,6 +35,8 @@
     font-weight: bolder;
 
     margin-bottom: 10%;
+    cursor: default;
+
   }
   form{
     display: block;
@@ -42,6 +46,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  cursor: default;
+
 
   border-bottom: $dblue 3px solid;
 
@@ -114,7 +120,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+
   height: 15%;
   width: 100%;
 
