--- a/src/styles/web/user-home.scss
+++ b/src/styles/web/user-home.scss
@@ -10,6 +10,7 @@
   height: 100vh;
   width: 25vw;
   background-color: $dblue;
+  min-width: 275px;
 }
 .side-menu-top{
   display: flex;
@@ -23,11 +24,11 @@ img{
   cursor: pointer;
   width: 80%;
 }
-
 }
 .side-menu-options{
 
   margin-top: 40px;
+
 
   ul{
     display: flex;
@@ -126,7 +127,7 @@ img{
     width: 75vw;
   }
 
-}
+
 
 .user-top-menu{
   display: flex;
@@ -156,13 +157,14 @@ img{
     align-items: center;
     justify-content: space-around;
     position: relative;
-    
     cursor: pointer;
+
+    height: 10vh;
 
 
     .username{
       position: absolute;
-      bottom: -20px;
+      bottom: 20px;
       right: 100px;
 
     }
@@ -185,6 +187,7 @@ img{
       }
     }
 
+      }
+    }
   }
-}
 }
