--- a/src/styles/web/user-info.scss
+++ b/src/styles/web/user-info.scss
@@ -135,7 +135,7 @@
         align-items: center;
 
         height: 60px;
-        width: 100%;
+        width: 40vw;
         margin-bottom: 55px;
         font-size: 30px;
         background: $dblue;
