--- a/src/styles/web/vehicle-location.scss
+++ b/src/styles/web/vehicle-location.scss
@@ -98,6 +98,44 @@
         height: 72vh;
         width: 100%;
 
+        .marker-cont{
+          height: 130px;
+          background: transparent;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+        .marker-desc{
+          font-family: sans-serif;
+
+          color: $white;
+          padding: 10px;
+          text-align: center;
+          background: $dblue;
+          border-radius: 10px;
+          z-index: 10;
+
+        }
+        .marker-border{
+          margin-top: -10px;
+          height: 18px;
+          width: 18px;
+          transform: rotate(45deg);
+          background: $white;
+          z-index: 0;
+
+        }
+        .marker-tri{
+          margin-top: -10px;
+          height: 15px;
+          width: 15px;
+          transform: rotate(45deg);
+          background: $dblue;
+          z-index: 0;
+
+        }
+      }
 
 
     }
