added some things

--- a/src/styles/web/vehicle-info.scss
+++ b/src/styles/web/vehicle-info.scss
@@ -68,6 +68,10 @@
       justify-content: flex-start;
       width: 50%;
       cursor: pointer;
+      // max-width: 530px;
+      min-width: 530px;
+
+
 
 
       div.active{
